docs: document recursive breakpoint protection and claude mcp add install
Add a new "Recursive breakpoint protection" section explaining why
expression evaluation is safe when it re-enters its own breakpoint,
which invocation sites are guarded, and how to reproduce the behaviour
via the "Echo Chamber" sandbox scenario. Also adds a cross-link bullet
in the Features list pointing at the new section.

Separately, rework the Claude Code configuration section into
Option A (claude mcp add CLI with MCP_TIMEOUT / MCP_TOOL_TIMEOUT env
vars) and Option B (manual .mcp.json with env block), replacing the
hardcoded Windows-style path with a generic /path/to placeholder.